Fix workers context stats in V8IsolateMemoryDumpProvider.

Bug: 880585
Change-Id: Ifd9107ef7fe6eabd8876063e47274275d9e1f55c
Reviewed-on: https://chromium-review.googlesource.com/1206332
Reviewed-by: Ross McIlroy <rmcilroy@chromium.org>
Commit-Queue: Ulan Degenbaev <ulan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589171}
Former-commit-id: dc12d16aa141b509af433dfe2393d278553087ba