gin/test/v8_test.cc
@@ -28,9 +28,7 @@ void V8Test::SetUp() {
                                  gin::IsolateHolder::kStableV8Extras,
                                  gin::ArrayBufferAllocator::SharedInstance());
 
-  instance_.reset(new gin::IsolateHolder(
-      base::ThreadTaskRunnerHandle::Get(),
-      gin::IsolateHolder::IsolateType::kBlinkMainThread));
+  instance_ = CreateIsolateHolder();
   instance_->isolate()->Enter();
   HandleScope handle_scope(instance_->isolate());
   context_.Reset(instance_->isolate(), Context::New(instance_->isolate()));
@@ -45,6 +43,12 @@ void V8Test::TearDown() {
   }
   instance_->isolate()->Exit();
   instance_.reset();
+}
+
+std::unique_ptr<gin::IsolateHolder> V8Test::CreateIsolateHolder() const {
+  return std::make_unique<gin::IsolateHolder>(
+      base::ThreadTaskRunnerHandle::Get(),
+      gin::IsolateHolder::IsolateType::kBlinkMainThread);
 }
 
 }  // namespace gin
